@@ -18,14 +18,21 @@ $nextYmd = date ( "Ymd", $next );
 $nextyear = date ( "Y", $next );
 $nextmonth = date ( "m", $next );
 $nextday = date ( "d", $next );
-$month_ago = date ( "Ymd", mktime ( 3, 0, 0, $thismonth - 1, $thisday, $thisyear ) );
 
 $prev = mktime ( 3, 0, 0, $thismonth, $thisday - 1, $thisyear );
 $prevYmd = date ( "Ymd", $prev );
 $prevyear = date ( "Y", $prev );
 $prevmonth = date ( "m", $prev );
 $prevday = date ( "d", $prev );
-$month_ahead = date ( "Ymd", mktime ( 3, 0, 0, $thismonth + 1, $thisday, $thisyear ) );
+
+if ( ! empty ( $bold_days_in_year ) && $bold_days_in_year == 'Y' ) {
+	$boldDays = true;
+} else {
+	$boldDays = false;
+}
+
+$startdate = sprintf ( "%04d%02d01", $thisyear, $thismonth );
+$enddate = sprintf ( "%04d%02d31", $thisyear, $thismonth );
 
 $HeadX = '';
 if ( $auto_refresh == "Y" && ! empty ( $auto_refresh_time ) ) {
@@ -41,17 +48,17 @@ print_header($INC,$HeadX);
 
 /* Pre-Load the repeated events for quckier access */
 $repeated_events = read_repeated_events ( empty ( $user ) ? $login : $user,
-  $cat_id, $nowYmd  );
+  $cat_id, $startdate  );
 
 /* Pre-load the non-repeating events for quicker access */
-$events = read_events ( empty ( $user ) ? $login : $user, $nowYmd, $nowYmd,
+$events = read_events ( empty ( $user ) ? $login : $user, $startdate, $enddate,
   $cat_id  );
 
 ?>
 
-<table style="border-width:0px; width:100%;">
-<tr><td style="vertical-align:top; width:70%;">
-<div style="border-width:0px; width:100%;">
+<table>
+<tr><td style="vertical-align:top; width:82%;">
+<div style="border-width:0px;">
 <a title="<?php etranslate("Next"); ?>" class="next" href="day.php?<?php echo $u_url;?>date=<?php echo $nextYmd . $caturl;?>"><img src="rightarrow.gif" alt="<?php etranslate("Next"); ?>" /></a>
 <a title="<?php etranslate("Previous"); ?>" class="prev" href="day.php?<?php echo $u_url;?>date=<?php echo $prevYmd . $caturl;?>"><img src="leftarrow.gif" alt="<?php etranslate("Previous"); ?>" /></a>
 <div class="title">
@@ -91,67 +98,8 @@ print_day_at_a_glance ( date ( "Ymd", $now ),
 </td>
 <td style="vertical-align:top;">
 <!-- START MINICAL -->
-<div style="text-align:right;">
-<table class="minical" cellspacing="1" cellpadding="2">
-<tr><th colspan="7" class="date"><?php echo $thisday?></th></tr>
-<tr class="monthnav">
-<td style="text-align:left;"><a title="<?php etranslate("Previous")?>" href="day.php?<?php echo $u_url; ?>date=<?php echo $month_ago . $caturl?>"><img src="leftarrowsmall.gif" class="prevnextsmall" alt="<?php etranslate("Previous")?>" /></a></td>
-<th colspan="5"><?php echo date_to_str ( sprintf ( "%04d%02d01", $thisyear, $thismonth ), $DATE_FORMAT_MY, false ) ?></th>
-<td style="text-align:right;"><a title="<?php etranslate("Next") ?>" href="day.php?<?php echo $u_url; ?>date=<?php echo $month_ahead . $caturl?>"><img src="rightarrowsmall.gif" class="prevnextsmall" alt="<?php etranslate("Next") ?>" /></a></td>
-</tr>
-<?php
-echo "<tr class=\"day\">\n";
-if ( $WEEK_START == 0 ) echo "<th>" .
-  weekday_short_name ( 0 ) . "</th>\n";
-for ( $i = 1; $i < 7; $i++ ) {
-  echo "<th>" .
-    weekday_short_name ( $i ) . "</th>\n";
-}
-if ( $WEEK_START == 1 ) echo "<th>" .
-  weekday_short_name ( 0 ) . "</th>\n";
-echo "</tr>\n";
-// generate values for first day and last day of month
-$monthstart = mktime ( 3, 0, 0, $thismonth, 1, $thisyear );
-$monthend = mktime ( 3, 0, 0, $thismonth + 1, 0, $thisyear );
-if ( $WEEK_START == "1" )
-  $wkstart = get_monday_before ( $thisyear, $thismonth, 1 );
-else
-  $wkstart = get_sunday_before ( $thisyear, $thismonth, 1 );
-$wkend = $wkstart + ( 3600 * 24 * 7 );
-
-for ( $i = $wkstart; date ( "Ymd", $i ) <= date ( "Ymd", $monthend );
-  $i += ( 24 * 3600 * 7 ) ) {
-  for ( $i = $wkstart; date ( "Ymd", $i ) <= date ( "Ymd", $monthend );
-    $i += ( 24 * 3600 * 7 ) ) {
-    echo "<tr style=\"text-align:center;\">\n";
-    for ( $j = 0; $j < 7; $j++ ) {
-      $date = $i + ( $j * 24 * 3600 );
-      if ( date ( "Ymd", $date ) >= date ( "Ymd", $monthstart ) &&
-        date ( "Ymd", $date ) <= date ( "Ymd", $monthend ) ) {
-		echo "<td";
-		if ( date ( "Ymd", $date ) == date ( "Ymd" ) ) {
-			//today
-			echo " id=\"today\"";
-		}
-        	if ( date ( "Ymd", $date ) == date ( "Ymd", $now ) ) {
-			//the day we're looking at
-			echo " class=\"selectedday\"";
-		}
-		echo ">";
-        echo "<a href=\"day.php?";
-        echo $u_url;
-        echo "date=" . date ( "Ymd", $date ) . "$caturl\" class=\"monthlink\">" .
-         date ( "d", $date ) .
-         "</a></td>\n";
-      } else {
-        print "<td style=\"background-color:$CELLBG;\">&nbsp;</td>\n";
-      }
-    }
-    echo "</tr>\n";
-  }
-}
-?>
-</table>
+<div class="minicalcontainer">
+<?php display_small_month ( $thismonth, $thisyear, true ); ?>
 </div>
 </td></tr></table>
 
